[gd_scene load_steps=8 format=3 uid="uid://kyh07dp5p3sf"]

[ext_resource type="Script" path="res://Assets/Scripts/shop.gd" id="1_8jhex"]
[ext_resource type="Texture2D" uid="uid://i7gro2sfv5m2" path="res://Assets/Textures/tophat.png" id="1_78iah"]
[ext_resource type="Texture2D" uid="uid://y8jiwgdx82oy" path="res://Assets/Textures/strawhat.png" id="2_73n51"]
[ext_resource type="Texture2D" uid="uid://s3uanauvebxq" path="res://Assets/Textures/bebe_carrot_icon.png" id="2_dtgpn"]
[ext_resource type="Texture2D" uid="uid://cdy0181kr0gom" path="res://Assets/Textures/basspro.png" id="4_exubs"]
[ext_resource type="Texture2D" uid="uid://ckwycvmwq3kym" path="res://Assets/Textures/question mark.png" id="5_1i2rw"]
[ext_resource type="Texture2D" uid="uid://dc2anp1jjwaqv" path="res://Assets/Textures/caughtfeesh.png" id="6_b2e37"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_8jhex")

[node name="Items" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 279.0
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.227451, 0.227451, 0.227451, 0.380392)

[node name="Gentle" type="ColorRect" parent="Items"]
layout_mode = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 340.0
offset_bottom = 121.0
color = Color(0.364706, 0.364706, 0.364706, 0.396078)

[node name="Sprite2D" type="Sprite2D" parent="Items/Gentle"]
position = Vector2(51, 53)
scale = Vector2(2.01563, 2)
texture = ExtResource("1_78iah")

[node name="Button" type="Button" parent="Items/Gentle"]
layout_mode = 0
offset_left = 246.0
offset_top = 27.0
offset_right = 294.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Buy"

[node name="RichTextLabel" type="RichTextLabel" parent="Items/Gentle"]
layout_mode = 0
offset_left = 101.0
offset_top = 27.0
offset_right = 242.0
offset_bottom = 51.0
text = "Distinguished Hat"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Items/Gentle"]
layout_mode = 0
offset_left = 102.0
offset_top = 50.0
offset_right = 209.0
offset_bottom = 101.0
theme_override_font_sizes/normal_font_size = 10
text = "Become a gentlefish
"
fit_content = true
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Items/Gentle"]
layout_mode = 0
offset_left = 261.0
offset_top = 65.0
offset_right = 290.0
offset_bottom = 83.0
theme_override_font_sizes/normal_font_size = 10
text = "20x"
fit_content = true
scroll_active = false

[node name="Sprite2D2" type="Sprite2D" parent="Items/Gentle"]
position = Vector2(291, 71)
scale = Vector2(0.390625, 0.390625)
texture = ExtResource("2_dtgpn")

[node name="Straw" type="ColorRect" parent="Items"]
layout_mode = 0
offset_left = 17.0
offset_top = 127.0
offset_right = 340.0
offset_bottom = 235.0
color = Color(0.364706, 0.364706, 0.364706, 0.396078)

[node name="Sprite2D" type="Sprite2D" parent="Items/Straw"]
position = Vector2(57, 57)
scale = Vector2(1.6875, 1.57813)
texture = ExtResource("2_73n51")

[node name="Button" type="Button" parent="Items/Straw"]
layout_mode = 0
offset_left = 244.0
offset_top = 35.0
offset_right = 292.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Buy"

[node name="RichTextLabel" type="RichTextLabel" parent="Items/Straw"]
layout_mode = 0
offset_left = 115.0
offset_top = 36.0
offset_right = 256.0
offset_bottom = 60.0
text = "Straw Hat"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Items/Straw"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.088
offset_left = 117.0
offset_top = 60.0
offset_right = -134.0
offset_bottom = -5.50401
theme_override_font_sizes/normal_font_size = 10
text = "A hat fish for a pirate"
fit_content = true
scroll_active = false
autowrap_mode = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="Items/Straw"]
layout_mode = 0
offset_left = 254.0
offset_top = 77.5
offset_right = 283.0
offset_bottom = 95.5
theme_override_font_sizes/normal_font_size = 10
text = "32x"
fit_content = true
scroll_active = false

[node name="Sprite2D3" type="Sprite2D" parent="Items/Straw"]
position = Vector2(284, 83.5)
scale = Vector2(0.390625, 0.390625)
texture = ExtResource("2_dtgpn")

[node name="Bass" type="ColorRect" parent="Items"]
layout_mode = 0
offset_left = 17.0
offset_top = 242.0
offset_right = 340.0
offset_bottom = 350.0
color = Color(0.364706, 0.364706, 0.364706, 0.396078)

[node name="Sprite2D" type="Sprite2D" parent="Items/Bass"]
position = Vector2(61, 56)
scale = Vector2(1.875, 1.89062)
texture = ExtResource("4_exubs")

[node name="Button" type="Button" parent="Items/Bass"]
layout_mode = 0
offset_left = 243.0
offset_top = 26.0
offset_right = 291.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Buy"

[node name="RichTextLabel" type="RichTextLabel" parent="Items/Bass"]
layout_mode = 0
offset_left = 121.0
offset_top = 15.0
offset_right = 228.0
offset_bottom = 61.0
text = "Adept Trout Store Hat"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Items/Bass"]
layout_mode = 0
offset_left = 120.0
offset_top = 58.0
offset_right = 213.0
offset_bottom = 127.0
theme_override_font_sizes/normal_font_size = 10
text = "Its almost as if you were a pro"
fit_content = true
scroll_active = false

[node name="RichTextLabel5" type="RichTextLabel" parent="Items/Bass"]
layout_mode = 0
offset_left = 254.0
offset_top = 68.5
offset_right = 283.0
offset_bottom = 86.5
theme_override_font_sizes/normal_font_size = 10
text = "10x"
fit_content = true
scroll_active = false

[node name="Sprite2D4" type="Sprite2D" parent="Items/Bass"]
position = Vector2(284, 74.5)
scale = Vector2(0.390625, 0.390625)
texture = ExtResource("2_dtgpn")

[node name="Fear" type="ColorRect" parent="Items"]
layout_mode = 0
offset_left = 18.0
offset_top = 358.0
offset_right = 341.0
offset_bottom = 466.0
color = Color(0.364706, 0.364706, 0.364706, 0.396078)

[node name="Sprite2D" type="Sprite2D" parent="Items/Fear"]
position = Vector2(47, 55)
scale = Vector2(1.42187, 1.42187)
texture = ExtResource("5_1i2rw")

[node name="Button" type="Button" parent="Items/Fear"]
layout_mode = 0
offset_left = 242.0
offset_top = 16.0
offset_right = 290.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Buy"

[node name="RichTextLabel" type="RichTextLabel" parent="Items/Fear"]
layout_mode = 0
offset_left = 99.0
offset_top = 21.0
offset_right = 240.0
offset_bottom = 45.0
text = "Hidden Hat"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Items/Fear"]
layout_mode = 0
offset_left = 101.0
offset_top = 45.0
offset_right = 208.0
offset_bottom = 96.0
theme_override_font_sizes/normal_font_size = 10
text = "Larry said something about being feared"
fit_content = true
scroll_active = false

[node name="RichTextLabel6" type="RichTextLabel" parent="Items/Fear"]
layout_mode = 0
offset_left = 254.0
offset_top = 59.5
offset_right = 283.0
offset_bottom = 77.5
theme_override_font_sizes/normal_font_size = 10
text = "5x"
fit_content = true
scroll_active = false

[node name="Sprite2D5" type="Sprite2D" parent="Items/Fear"]
position = Vector2(284, 65.5)
scale = Vector2(0.390625, 0.390625)
texture = ExtResource("6_b2e37")

[node name="TextRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 364.0
offset_right = 262.0
offset_bottom = 466.0
color = Color(0.34902, 0.34902, 0.34902, 0.65098)

[node name="TextBox" type="RichTextLabel" parent="TextRect"]
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 233.0
offset_bottom = 96.0
text = "Welcome to my hat shop!"
fit_content = true
scroll_active = false

[node name="Close Button" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
offset_right = 53.0
offset_bottom = 47.0
text = "X
"

[connection signal="pressed" from="Items/Gentle/Button" to="." method="gentle_button_pressed"]
[connection signal="pressed" from="Items/Straw/Button" to="." method="straw_button_pressed"]
[connection signal="pressed" from="Items/Bass/Button" to="." method="bass_button_pressed"]
[connection signal="pressed" from="Items/Fear/Button" to="." method="fear_button_pressed"]
